<resources>
    <string name="app_name">好食</string>
    <string name="title_activity_result">结果</string>
    <string name="submit">发送</string>
    <string name="input_hint">输入消息</string>

    <string name="username">用户名</string>
    <string name="old_psd">旧密码</string>
    <string name="new_psd">新密码</string>
    <string name="psd">密码</string>
    <string name="psd_again">再次输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="follow">+关注</string>
    <string name="unfollow">-取消关注</string>

    <string name="recent_recipe">近期提供的菜谱</string>

    <string name="welcome">欢迎您</string>

    <string name="recipe_name">菜谱名称</string>
    <string name="description">描述</string>

    <string name="edit_recipe">编辑菜谱</string>
    <string name="recipe_detail">菜谱详情</string>
    <string name="comment">评论</string>
    <string name="edit_comment">撰写评论&#8230;</string>
    <string name="delete">删除</string>

    <string name="edit_info">修改信息</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>

    <string name="confirm">确认</string>
    <string name="choose">请选择</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索&#8230;</string>
    <string name="history">历史记录</string>
    <string name="like_tail">人喜欢</string>
    <string name="read_tail">人阅读过</string>
    <string name="no_result">可惜没有结果哦~</string>
</resources>
